<resources>
    <string name="app_name">MySplash</string>
    <string name="user">Nombre de Usuario:</string>
    <string name="pass">Contraseña</string>
    <string name="btnAcept">Aceptar</string>
    <string name="btnOlvide">Olvide contraseña</string>
    <string name="btnCrea">Registrarme</string>
    <string name="text1">R E G I S T R O</string>
    <string name="olv">¿Has olvidado tu contraseña?\n¡Lo sentimos!</string>
    <string name="triste">Usuario:\n\n\n\n\n Correo:</string>
    <string name="Incio">BIENVENID@ \nAL INICIO</string>
    <string name="empty">no puede estar vacio</string>
    <string name="close">Se cerro</string>
    <string name="no_exist">Este superheroe no existe</string>
</resources>